--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,14 @@
     <groupId>in.hungrybluedev</groupId>
     <artifactId>statistics</artifactId>
     <version>0.0.1</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0-beta7</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <name>Statistics</name>
     <url>https://hungrybluedev.in/</url>
@@ -24,4 +32,9 @@
         </contributor>
     </contributors>
 
+    <properties>
+        <java.version>8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 </project>
